tenzir/tests/exec/expr/escape/basic/incomplete_hex.txt
error: invalid hex escape sequence
 --> exec/expr/escape/incomplete_hex.tql:4:7
  |
4 |   x: "\x1"
  |       ^^^^ 
  |
